fix: Prevent toolbar button overflow
Fixes https://issues.redhat.com/browse/RHIF-72.

--- a/src/components/InventoryTable/InventoryList.scss
+++ b/src/components/InventoryTable/InventoryList.scss
@@ -99,12 +99,6 @@
         display: inline-block;
     }
 
-    .pf-c-table__action .pf-c-dropdown {
-        position: relative;
-        left: 10px;
-        top: 3px;
-    }
-
     .ins-composed-col div {
         word-wrap: break-word;
         word-break:break-all;
